# jetank_ros_main

./: .gitignore  package.xml  readme.md  setup.cfg  setup.py
config/: controllers.yaml  motor_params.yaml  scservo_control.yaml  stereo_params.yaml
jetank_ros_main/scripts/: test_cameras.py  test_drive.py
launch/: gazebo_sim.launch.py  main.launch.py  motor_controller.launch.py  rviz.launch.py  stereo_camera.launch.py  stereo_camera_rviz.launch.py  stereo_camera_sim.launch.py  unified.launch.py  urdf.launch.py
resource/: jetank.repos
rviz/: unified.rviz
scripts/: CUDA_test.py  install_jetson.sh  install_laptop.sh  teleop_keyboard.py
urdf/: jetank.urdf  jetank.xacro  jetank_arm.xacro  jetank_camera.xacro  jetank_gripper.xacro  jetank_test.urdf  jetank_wheel.xacro  macros.xacro  moveit_urdf.urdf  properties.xacro
worlds/: obstacle_course.sdf  simple_test.sdf  sock_arena.sdf
